@@ -34,6 +34,9 @@
 	* src/server/exmpp_server_legacy_auth.erl: Add a function to tell if
 	the peer wants to know the authentication fields.
 
+	* src/core/exmpp_jid.erl: For JIDs, accept the empty string in
+	argument but still use undefined in the #jid construction.
+
 2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Add functions to convert to and from
